# OpenGL-project

./: CMakeLists.txt  main.cpp
assets/Shaders/: FlatModel.vs
include/: Camera.h  LightRenderer.h  Mesh.h  ShaderLoader.h
src/: Camera.cpp  LightRenderer.cpp  Mesh.cpp  ShaderLoader.cpp
